[package]
name = "teleport-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    num = "*"
    log = "0.4"
    env_logger = "0.9"
    redis = "*"
    num_enum = "*"
    chrono = "0.4"
    serde_json = "1.0"
    serde_bytes = "0.11"
    serde = { version = "1.0", features = ["derive"] }
    tokio = { version = "1", features = ["full"] }
    sea-orm = { version = "0.9.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }

    # futures = "*"
