[package]
name = "teleport-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
    crate-type = ["lib", "cdylib"]

[dependencies]
    num = "*"
    log = "0.4"
    env_logger = "0.9"
    redis = "*"
    deku = "0.15.0"
    chrono = "0.4"
    tokio = { version = "1", features = ["full"] }
    sea-orm = { version = "0.9.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }

    # futures = "*"
